--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -283,7 +283,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div id="dognum_pannel" role="tabpane2" aria-labelledby="dognum" class="tab_conts active">
+                        <div id="dognum_pannel" role="tabpanel" aria-labelledby="dognum" class="tab_conts active">
                             <div class="event_popup">
                                 <strong>동남아 특가 프로모션</strong>
                                 <div class="event_title_s">국제선 동남아 운항</div>
