--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -118,7 +118,7 @@
                         <div class="swiper-pagination"></div>
                     </div>
                     <div class="user">
-                        <h3>에어로케이와 함께하는 첫 걸음<br>출발지를 선택하세요</h3>
+                        <h3>에케와 함께하는 첫 걸음<br>출발지를 선택하세요</h3>
                         <div class="check_group">
                             <div class="inner">
                                 <label for="one_trip">편도</label>
@@ -387,7 +387,7 @@
             </section>
             <section class="event_ticket">
                 <div class="wrapper">
-                    <h2>오직 에케에서만<br>특별한 혜택</h2>
+                    <h2>에케만의 특별한 혜택</h2>
                 </div>
                 <div class="swiper_wrap">
                     <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소 -->
