--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -288,7 +288,7 @@
                                 <strong>동남아 특가 프로모션</strong>
                                 <div class="event_title_s">국제선 동남아 운항</div>
                                 <span>기간 9.24(화)-9.30(월) 17:00</span>
-                                <button type="button" class="btn">바로가기</button>
+                                <div class="go"><a href="#n">바로가기</a></div>
                             </div>
                             <ul>
                                 <li>
