--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -506,14 +506,18 @@
                     <h2>도움이 필요하신가요?</h2>
                         <div class="inner">
                             <div class="sale_coupon">
-                                <strong>할인쿠폰</strong>
-                                <p>특가 쿠폰은 여기에 있어요</p>
-                                <div class="more"><a href="#n">자세히보기</a></div>
+                                <a href="#n">
+                                    <strong>할인쿠폰</strong>
+                                    <p>특가 쿠폰은 여기에 있어요</p>
+                                    <div class="more">자세히보기</div>
+                                </a>
                             </div>
                             <div class="cs">
+                                <a href="#n">
                                 <strong>상담하기</strong>
                                 <p>자주묻는 질문 항공기 수하물규정이 있어요</p>
-                                <div class="more"><a href="#n">자세히보기</a></div>
+                                <div class="more">자세히보기</div>
+                                </a>
                             </div>
                         </div>
                 </div>
