--- a/rot/index.html
+++ b/rot/index.html
@@ -37,28 +37,28 @@
                         <div class="swiper">    
                             <ul class="swiper-wrapper"> 
                                 <li class="swiper-slide">
-                                    <div class="photo"><img src="../rot/images/new item/new_item_01.png" alt="나폴리맛피아버거">나폴리맛피아 모짜렐라버거</div>
+                                    <div class="photo"><img src="../rot/images/newitem/new_item_01.png" alt="나폴리맛피아버거">나폴리맛피아 모짜렐라버거</div>
                                     <div class="new_item_title">
                                         <h3>나폴리맛피아 모짜렐라버거(토마토 바질)</h3>
                                         <p>바질의 신선함을 담은 바질마요소스에 풍부하고 진한 토마토소스로 맛을 낸 나폴리맛피아식 스페셜 모짜렐라버거</p>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="photo"><img src="../rot/images/new item/new_item_02.png" alt="전주비빔라이스버거">전주비빔라이스버거</div>
+                                    <div class="photo"><img src="../rot/images/newitem/new_item_02.png" alt="전주비빔라이스버거">전주비빔라이스버거</div>
                                     <div class="new_item_title">
                                         <h3>전주 비빔라이스 버거</h3>
                                         <p>전주비빔밥을 담은 라이스번과 노른자가 터지는 반숙란,달콤한 고추장 소스가 어우러진 새로운 라이스 버거</p>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="photo"><img src="../rot/images/new item/new_item_03.png" alt="리아불고기버거">리아불고기버거</div>
+                                    <div class="photo"><img src="../rot/images/newitem/new_item_03.png" alt="리아불고기버거">리아불고기버거</div>
                                     <div class="new_item_title">
                                         <h3>리아 불고기</h3>
                                         <p>전주비빔밥을 담은 라이스번과 노른자가 터지는 반숙란,달콤한 고추장 소스가 어우러진 새로운 라이스 버거</p>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
-                                    <div class="photo"><img src="../rot/images/new item/new_item_04.png" alt="리아불고기베이컨">리아불고기베이컨</div>
+                                    <div class="photo"><img src="../rot/images/newitem/new_item_04.png" alt="리아불고기베이컨">리아불고기베이컨</div>
                                     <div class="new_item_title">
                                         <h3>리아 불고기 베이컨</h3>
                                         <p>베이컨+토마토로 더욱 풍성해진 맛과 볼륨감의 불고기버거 업그레이드 한정판</p>
@@ -85,30 +85,30 @@
                 <div class="wrapper">
                     <h2>Core value</h2>
                     <div class="core_value_group">
-                        <div class="Suitable">
-                            <div class="icon_img a">아이콘</div>
-                            <div class="Suitable title">
+                        <div class="Suitable inner">
+                            <div class="artwork a">아트워크</div>
+                            <div class="title">
                                 <h3>Suitable</h3>
                                 <span>한국인의 입맛에 꼭 맞는</span>
                             </div>
                         </div>
-                        <div class="Friendly">
-                            <div class="icon_img b">아이콘</div>
-                            <div class="Friendly title">
+                        <div class="Friendly inner active">
+                            <div class="artwork b">아트워크</div>
+                            <div class="title">
                                 <h3>Friendly</h3>
                                 <span>친근하고 언제나 편하게</span>
                             </div>
                         </div>
-                        <div class="Various">
-                            <div class="icon_img c">아이콘</div>
-                            <div class="Various title">
+                        <div class="Various inner">
+                            <div class="artwork c">아트워크</div>
+                            <div class="title">
                                 <h3>Various</h3>
                                 <span>취향에 맞춘 다양한 맛</span>
                             </div>
                         </div>
-                        <div class="Enjoyable">
-                            <div class="icon_img d">아이콘</div>
-                            <div class="Enjoyable title">
+                        <div class="Enjoyable inner">
+                            <div class="artwork d">아트워크</div>
+                            <div class="title">
                                 <h3>Enjoyable</h3>
                                 <span>즐겁고 유쾌한 있는</span>
                             </div>
@@ -116,7 +116,42 @@
                     </div>
                 </div>
             </section>
-            <section class="history"></section>
+            <section class="history">
+                <div class="wrapper">
+                    <h2>History</h2>
+                    <div class="his inner">
+                        <div class="1992year">
+                            <div class="1992 title">
+                                <h3>1922년 불고기 버거출시</h3>
+                                <p>k 버거 자존심 업계 최초 불고기 버거 출시</p>
+                            </div>
+                            <div class="artwork">불고기버거일러스트</div>
+                        </div>
+                        <div class="1993year">
+                            <div class="1993 title">
+                                <h3>1999년 라이스 버거 출시</h3>
+                                <p>한국인의 밥(김치,새,불고기)</p>
+                            </div>
+                                <div class="artwork">라이스버거일러스트</div>
+                            </div>
+                        </div>
+                        <div class="2015year">
+                            <div class="2015 title">
+                                <h3>2015 모짜렐라 인더버거</h3>
+                                <p>이탈리 자연산 치즈가 길게 늘어나는 버거</p>
+                            </div>
+                            <div class="artwork">모짜렐라버거일러스트</div>
+                        </div>
+                        <div class="2020year">
+                            <div class="2020 title">
+                                <h3>2020년 밀리터리 버거 출시</h3>
+                                <p>군데리아의 전설 눈앞에</p>
+                            </div>
+                            <div class="artwork">밀리터리버거일러스트</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="recipy"></section>
         </div>
         <footer></footer>
