--- a/rot/index.html
+++ b/rot/index.html
@@ -77,7 +77,7 @@
                 <div class="stroy_bg">Taste</div>
                 <div class="wrapper">
                     <h2>stroy</h2>
-                    <p>롯데리아는 한국인의 입맛을 사로잡은 차별화된 한국식 버거를 중심으로 다양하고 특색있는 메뉴와 편리한 서비스를 제공해 고객의 <span>>일상에 맛있는 즐거움</span>을 선사하는대한민국 대표 햄버거 프랜차이즈 입니다.</p>
+                    <p>롯데리아는 한국인의 입맛을 사로잡은 차별화된 한국식 버거를 중심으로 다양하고 특색있는 메뉴와 편리한 서비스를 제공해 고객의 <span>일상에 맛있는 즐거움</span>을 선사하는대한민국 대표 햄버거 프랜차이즈 입니다.</p>
                     <div class="more"><a href="#n">더보기</a></div>
                 </div>
             </section>
@@ -86,28 +86,28 @@
                     <h2>Core value</h2>
                     <div class="core_value_group">
                         <div class="Suitable inner">
-                            <div class="artwork a">아트워크</div>
+                            <div class="artwork a" alt="햄버거 일러스트트">아트워크</div>
                             <div class="title">
                                 <h3>Suitable</h3>
                                 <span>한국인의 입맛에 꼭 맞는</span>
                             </div>
                         </div>
                         <div class="Friendly inner active">
-                            <div class="artwork b">아트워크</div>
+                            <div class="artwork b" alt="햄버거와 감자튀김이 우정을다지는 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Friendly</h3>
                                 <span>친근하고 언제나 편하게</span>
                             </div>
                         </div>
                         <div class="Various inner">
-                            <div class="artwork c">아트워크</div>
+                            <div class="artwork c" alt="다양한 색감의 버거 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Various</h3>
                                 <span>취향에 맞춘 다양한 맛</span>
                             </div>
                         </div>
                         <div class="Enjoyable inner">
-                            <div class="artwork d">아트워크</div>
+                            <div class="artwork d" alt="즐겁고 유쾌한 버거 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Enjoyable</h3>
                                 <span>즐겁고 유쾌한 있는</span>
@@ -119,42 +119,78 @@
             <section class="history">
                 <div class="wrapper">
                     <h2>History</h2>
-                    <div class="his inner">
-                        <div class="1992year">
+                    <div class="year_group">
+                        <div class="year right">
                             <div class="1992 title">
                                 <h3>1922년 불고기 버거출시</h3>
                                 <p>k 버거 자존심 업계 최초 불고기 버거 출시</p>
                             </div>
-                            <div class="artwork">불고기버거일러스트</div>
+                            <div class="artwork bulgo" alt="불고기버거일러스트">불고기버거일러스트</div>
                         </div>
-                        <div class="1993year">
+                        <div class="year left">
                             <div class="1993 title">
                                 <h3>1999년 라이스 버거 출시</h3>
                                 <p>한국인의 밥(김치,새,불고기)</p>
                             </div>
-                                <div class="artwork">라이스버거일러스트</div>
-                            </div>
+                            <div class="artwork rice" alt="라이스버거일러스트">라이스버거일러스트</div>
                         </div>
-                        <div class="2015year">
+                        <div class="year right">
                             <div class="2015 title">
                                 <h3>2015 모짜렐라 인더버거</h3>
                                 <p>이탈리 자연산 치즈가 길게 늘어나는 버거</p>
                             </div>
-                            <div class="artwork">모짜렐라버거일러스트</div>
+                            <div class="artwork mozz" alt="모짜렐라버거일러스트">모짜렐라버거일러스트</div>
                         </div>
-                        <div class="2020year">
+                        <div class="year left">
                             <div class="2020 title">
                                 <h3>2020년 밀리터리 버거 출시</h3>
                                 <p>군데리아의 전설 눈앞에</p>
                             </div>
-                            <div class="artwork">밀리터리버거일러스트</div>
+                            <div class="artwork milly" alt="밀리터리버거일러스트">밀리터리버거일러스트</div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="recipy"></section>
+            <section class="recipy">
+                <div class="wrapper">
+                    <h2>recipy</h2>
+                    <div class="recipy_group">
+                        <div class="right">
+                            <div class="right_group">
+                                <h3>치즈토핑 더 추가</h3>
+                                <p>치즈를 더 추가해서 버거를 먹는 건 내 몸에게는 미안하지만<br>
+                                    맛있게 먹을수있는 하나의 방법입니다</p>
+                            </div>
+                            <div class="more"><a href="#n">자세히보기</a></div>
+                        </div>
+                        <div class="left_group">
+                            <div class="top">
+                                <div class="top_group">
+                                    <h3>고기토핑을 더 추가</h3>
+                                    <p>불고기 버거에 고기 토핑을 더 추가해서 고기의 풍미와 육즙을 즐길수있는 맛있는 방법입니다</p>
+                                </div>
+                                <div class="more"><a href="#n">자세히보기</a></div>
+                            </div>
+                            <div class="bottom">
+                                <div class="bottom_group">
+                                    <h3>눌러서 먹기</h3>
+                                    <p>햄버거를 잘 먹는 사람들의 대부분은 먹기전에 한번 눌러서 재료들이 잘 뭉치게끔 눌러서 먹습니다.</p>
+                                </div>
+                                <div class="more"><a href="#n">자세히보기</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-        <footer></footer>
+        <footer>
+            <div class="wrapper">
+                <div class="infor">
+                    <h2>NO.1 KOREA BURGER<br>ENJOY HAPPY</h2>
+                </div>
+                <div class="copyright">copyright © 2023 Lotte GRS co.,ltd all right reserved</div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
