--- a/rot/index.html
+++ b/rot/index.html
@@ -27,7 +27,12 @@
             <section class="visual">
                 <div class="wrapper">
                     <h2>NO.1 KOREA BURGER<br>ENJOY HAPPY</h2>
-                    <div class="photo"><img src="../rot/images/visual/visual_hamberger.png" alt="불고기버거">불고기버거</div>
+                    <div class="inner">
+                        <img class="buguer" src="../rot/images/visual/visual_hamberger.png" alt="불고기버거">
+                        <img class="chizz" src="../rot/images/visual/visual_stick.png" alt="치즈스틱">
+                        <img class="photato" src="../rot/images/visual/visual_photato.svg" alt="감자튀김 일러스트">
+                        <img class="flash" src="../rot/images/visual/visual_flash.png" alt="폭죽">
+                    </div>
                 </div>
             </section>
             <section class="new_item">
@@ -80,46 +85,54 @@
                     <p>롯데리아는 한국인의 입맛을 사로잡은 차별화된 한국식 버거를 중심으로 다양하고 특색있는 메뉴와 편리한 서비스를 제공해 고객의 <span>일상에 맛있는 즐거움</span>을 선사하는대한민국 대표 햄버거 프랜차이즈 입니다.</p>
                     <div class="more"><a href="#n">더보기</a></div>
                 </div>
+                <img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진">
+                <img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진">
             </section>
             <section class="core_value">
                 <div class="wrapper">
                     <h2>Core value</h2>
-                    <div class="core_value_group">
-                        <div class="Suitable inner">
-                            <div class="artwork a" alt="햄버거 일러스트트">아트워크</div>
+                    <ul class="core_value_group">
+                        <li class="Suitable">
+                            <div class="artwork a" alt="햄버거 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Suitable</h3>
                                 <span>한국인의 입맛에 꼭 맞는</span>
                             </div>
-                        </div>
-                        <div class="Friendly inner active">
+                        </li>
+                        <li class="Friendly active">
                             <div class="artwork b" alt="햄버거와 감자튀김이 우정을다지는 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Friendly</h3>
                                 <span>친근하고 언제나 편하게</span>
                             </div>
-                        </div>
-                        <div class="Various inner">
+                        </li>
+                        <li class="Various">
                             <div class="artwork c" alt="다양한 색감의 버거 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Various</h3>
                                 <span>취향에 맞춘 다양한 맛</span>
                             </div>
-                        </div>
-                        <div class="Enjoyable inner">
+                        </li>
+                        <li class="Enjoyable">
                             <div class="artwork d" alt="즐겁고 유쾌한 버거 일러스트">아트워크</div>
                             <div class="title">
                                 <h3>Enjoyable</h3>
                                 <span>즐겁고 유쾌한 있는</span>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="history">
                 <div class="wrapper">
                     <h2>History</h2>
                     <div class="year_group">
+                        <svg class="color_line" viewBox="0 0 261 1232" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M76.5 14.4997C172.5 -18.0016 254.113 18.543 258 141.488C266 394.505 19 304.483 19 524.488C19 705.988 258 657.983 258 909.988C258 1047.48 149 1241.01 3 1227.99"/>
+                        </svg>
+                        <svg class="line" viewBox="0 0 261 1232" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M76.5 14.4997C172.5 -18.0016 254.113 18.543 258 141.488C266 394.505 19 304.483 19 524.488C19 705.988 258 657.983 258 909.988C258 1047.48 149 1241.01 3 1227.99"/>
+                        </svg>
                         <div class="year right">
                             <div class="1992 title">
                                 <h3>1922년 불고기 버거출시</h3>
@@ -130,7 +143,7 @@
                         <div class="year left">
                             <div class="1993 title">
                                 <h3>1999년 라이스 버거 출시</h3>
-                                <p>한국인의 밥(김치,새,불고기)</p>
+                                <p>한국인의 밥(김치,새우,불고기)</p>
                             </div>
                             <div class="artwork rice" alt="라이스버거일러스트">라이스버거일러스트</div>
                         </div>
@@ -153,7 +166,7 @@
             </section>
             <section class="recipy">
                 <div class="wrapper">
-                    <h2>recipy</h2>
+                    <h2>recipy</h2>  
                     <div class="recipy_group">
                         <div class="right">
                             <div class="right_group">
