--- a/rot/index.html
+++ b/rot/index.html
@@ -138,7 +138,9 @@
                                 <h3>1922년 불고기 버거출시</h3>
                                 <p>k 버거 자존심 업계 최초 불고기 버거 출시</p>
                             </div>
-                            <div class="artwork bulgo" alt="불고기버거일러스트">불고기버거일러스트</div>
+                            <div class="artwork bulgo" alt="불고기버거일러스트">불고기버거일러스트
+                                <div class="bulgo_head"><img src="../rot/images/history/bulgogi_head.svg" alt="불고기헤드">불고기헤드</div>
+                            </div>
                         </div>
                         <div class="year left">
                             <div class="1993 title">
@@ -172,7 +174,8 @@
                             <div class="right_group">
                                 <h3>치즈토핑 더 추가</h3>
                                 <p>치즈를 더 추가해서 버거를 먹는 건 내 몸에게는 미안하지만<br>
-                                    맛있게 먹을수있는 하나의 방법입니다</p>
+                                    맛있게 먹을수있는 하나의 방법입니다
+                                </p>
                             </div>
                             <div class="more"><a href="#n">자세히보기</a></div>
                         </div>
@@ -194,6 +197,8 @@
                         </div>
                     </div>
                 </div>
+                <img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진">
+                <img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진">
             </section>
         </div>
         <footer>
