250214-두번째 포폴완료
히스토리 크기 이슈는 코딩을 다시해야할수있음

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -11,6 +11,7 @@
     <script src="js/main.js"></script>
     <script src="js/common.js"></script>
     <script src= "../Aerok/js/jquery-sticky.js" ></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Aerok-k 에어로케이항공</title>
