--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <ul>
         <li><a href="Aerok/index.html">20250206</a></li>
+        <li><a href="rot/index.html">20250214</a></li>
     </ul>
 </body>
 </html>
