--- a/rot/index.html
+++ b/rot/index.html
@@ -10,9 +10,13 @@
     <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>롯데리아</title>
 </head>
 <body>
+    <div class="skipnav">
+        <a class="cnt" href="#skip_content">본문바로가기</a>
+    </div>
     <div id="wrap">
         <header>
             <div class="wrapper">
@@ -24,7 +28,7 @@
             </div>
         </header>
         <div class="container">
-            <section class="visual">
+            <section id="skip_content" class="visual">
                 <div class="wrapper">
                     <h2>NO.1 KOREA BURGER<br>ENJOY HAPPY</h2>
                     <div class="inner">
