--- a/rot/index.html
+++ b/rot/index.html
@@ -10,13 +10,9 @@
     <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>롯데리아</title>
 </head>
 <body>
-    <div class="skipnav">
-        <a class="cnt" href="#skip_content">본문바로가기</a>
-    </div>
     <div id="wrap">
         <header>
             <div class="wrapper">
@@ -28,14 +24,14 @@
             </div>
         </header>
         <div class="container">
-            <section id="skip_content" class="visual">
+            <section class="visual">
                 <div class="wrapper">
                     <h2>NO.1 KOREA BURGER<br>ENJOY HAPPY</h2>
                     <div class="inner">
-                        <img class="buguer" src="../rot/images/visual/visual_hamberger.png" alt="불고기버거">
-                        <img class="chizz" src="../rot/images/visual/visual_stick.png" alt="치즈스틱">
-                        <img class="photato" src="../rot/images/visual/visual_photato.svg" alt="감자튀김 일러스트">
-                        <img class="flash" src="../rot/images/visual/visual_flash.png" alt="폭죽">
+                        <div><img class="buguer" src="../rot/images/visual/visual_hamberger.png" alt="불고기버거"></div>
+                        <div><img class="chizz" src="../rot/images/visual/visual_stick.png" alt="치즈스틱"></div>
+                        <div><img class="photato" src="../rot/images/visual/visual_photato.svg" alt="감자튀김 일러스트"></div>
+                        <div><img class="flash" src="../rot/images/visual/visual_flash.png" alt="폭죽"></div>
                     </div>
                 </div>
             </section>
@@ -89,8 +85,8 @@
                     <p>롯데리아는 한국인의 입맛을 사로잡은 차별화된 한국식 버거를 중심으로 다양하고 특색있는 메뉴와 편리한 서비스를 제공해 고객의 <span>일상에 맛있는 즐거움</span>을 선사하는대한민국 대표 햄버거 프랜차이즈 입니다.</p>
                     <div class="more"><a href="#n">더보기</a></div>
                 </div>
-                <img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진">
-                <img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진">
+                <div><img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진"></div>
+                <div><img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진"><div>
             </section>
             <section class="core_value">
                 <div class="wrapper">
@@ -201,8 +197,8 @@
                         </div>
                     </div>
                 </div>
-                <img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진">
-                <img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진">
+                <div><img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진"></div>
+                <div><img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진"></div>
             </section>
         </div>
         <footer>
