--- a/rot/index.html
+++ b/rot/index.html
@@ -86,35 +86,35 @@
                     <div class="more"><a href="#n">더보기</a></div>
                 </div>
                 <div><img class="hambergur" src="../rot/images/stroy/hambergur.svg" alt="햄버거 사진"></div>
-                <div><img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진"><div>
+                <div><img class="photato" src="../rot/images/stroy/photato.svg" alt="포테이토 사진"></div>
             </section>
             <section class="core_value">
                 <div class="wrapper">
                     <h2>Core value</h2>
                     <ul class="core_value_group">
                         <li class="Suitable">
-                            <div class="artwork a" alt="햄버거 일러스트">아트워크</div>
+                            <div class="artwork a">아트워크</div>
                             <div class="title">
                                 <h3>Suitable</h3>
                                 <span>한국인의 입맛에 꼭 맞는</span>
                             </div>
                         </li>
                         <li class="Friendly active">
-                            <div class="artwork b" alt="햄버거와 감자튀김이 우정을다지는 일러스트">아트워크</div>
+                            <div class="artwork b">아트워크</div>
                             <div class="title">
                                 <h3>Friendly</h3>
                                 <span>친근하고 언제나 편하게</span>
                             </div>
                         </li>
                         <li class="Various">
-                            <div class="artwork c" alt="다양한 색감의 버거 일러스트">아트워크</div>
+                            <div class="artwork c">아트워크</div>
                             <div class="title">
                                 <h3>Various</h3>
                                 <span>취향에 맞춘 다양한 맛</span>
                             </div>
                         </li>
                         <li class="Enjoyable">
-                            <div class="artwork d" alt="즐겁고 유쾌한 버거 일러스트">아트워크</div>
+                            <div class="artwork d">아트워크</div>
                             <div class="title">
                                 <h3>Enjoyable</h3>
                                 <span>즐겁고 유쾌한 있는</span>
@@ -138,7 +138,7 @@
                                 <h3>1922년 불고기 버거출시</h3>
                                 <p>k 버거 자존심 업계 최초 불고기 버거 출시</p>
                             </div>
-                            <div class="artwork bulgo" alt="불고기버거일러스트">불고기버거일러스트
+                            <div class="artwork bulgo">불고기버거일러스트
                                 <div class="bulgo_head"><img src="../rot/images/history/bulgogi_head.svg" alt="불고기헤드">불고기헤드</div>
                             </div>
                         </div>
@@ -147,21 +147,21 @@
                                 <h3>1999년 라이스 버거 출시</h3>
                                 <p>한국인의 밥(김치,새우,불고기)</p>
                             </div>
-                            <div class="artwork rice" alt="라이스버거일러스트">라이스버거일러스트</div>
+                            <div class="artwork rice">라이스버거일러스트</div>
                         </div>
                         <div class="year right">
                             <div class="2015 title">
                                 <h3>2015 모짜렐라 인더버거</h3>
                                 <p>이탈리 자연산 치즈가 길게 늘어나는 버거</p>
                             </div>
-                            <div class="artwork mozz" alt="모짜렐라버거일러스트">모짜렐라버거일러스트</div>
+                            <div class="artwork mozz">모짜렐라버거일러스트</div>
                         </div>
                         <div class="year left">
                             <div class="2020 title">
                                 <h3>2020년 밀리터리 버거 출시</h3>
                                 <p>군데리아의 전설 눈앞에</p>
                             </div>
-                            <div class="artwork milly" alt="밀리터리버거일러스트">밀리터리버거일러스트</div>
+                            <div class="artwork milly">밀리터리버거일러스트</div>
                         </div>
                     </div>
                 </div>
