--- a/rot/index.html
+++ b/rot/index.html
@@ -28,10 +28,10 @@
                 <div class="wrapper">
                     <h2>NO.1 KOREA BURGER<br>ENJOY HAPPY</h2>
                     <div class="inner">
-                        <div><img class="buguer" src="../rot/images/visual/visual_hamberger.png" alt="불고기버거"></div>
-                        <div><img class="chizz" src="../rot/images/visual/visual_stick.png" alt="치즈스틱"></div>
-                        <div><img class="photato" src="../rot/images/visual/visual_photato.svg" alt="감자튀김 일러스트"></div>
-                        <div><img class="flash" src="../rot/images/visual/visual_flash.png" alt="폭죽"></div>
+                        <img class="buguer" src="../rot/images/visual/visual_hamberger.png" alt="불고기버거">
+                        <img class="chizz" src="../rot/images/visual/visual_stick.png" alt="치즈스틱">
+                        <img class="photato" src="../rot/images/visual/visual_photato.svg" alt="감자튀김 일러스트">
+                        <img class="flash" src="../rot/images/visual/visual_flash.png" alt="폭죽">
                     </div>
                 </div>
             </section>
