--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </header>
-        <div class="contaier">
+        <div class="container">
             <section class="visual" id="skip_content">
                 <div class="wrapper">
                     <h2>이벤트팝업창과 로그인정보</h2>
